# strix

./: .gitignore  CLAUDE.md  MISSING_SECURITY_CAPABILITIES.md  PARAMETER_VALIDATION_GUIDE.md  README.md  VALIDATION_IMPLEMENTATION_STATUS.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  pyproject.toml
containers/: Dockerfile
strix/agents/: base_agent.py  state.py
strix/agents/StrixAgent/: system_prompt.jinja
strix/agents/VerificationAgent/: __init__.py  system_prompt.jinja  verification_agent.py
strix/interface/: main.py  tui.py
strix/interface/tool_components/: file_edit_renderer.py  reporting_renderer.py
strix/llm/: llm.py
strix/prompts/advanced/: blind_vulnerability_exploitation.jinja  chained_vulnerabilities.jinja  second_order_attacks.jinja
strix/prompts/cloud/: admission_controller_bypass.jinja  aws_api_gateway.jinja  aws_iam.jinja  aws_lambda.jinja  aws_s3.jinja  azure_ad_attacks.jinja  azure_ad_b2c.jinja  azure_blob.jinja  azure_functions.jinja  cloudflare_workers.jinja  container_breakout_advanced.jinja  credentials_exposure.jinja  docker_security.jinja  edge_computing_security.jinja  encryption_at_rest.jinja  etcd_exploitation.jinja  gcp_cloud_functions.jinja  gcp_cloud_run.jinja  gcp_cloud_storage.jinja  helm_chart_security.jinja  iam_privilege_escalation.jinja  istio_envoy_bypass.jinja  kubelet_api_abuse.jinja  kubernetes.jinja  kubernetes_escape.jinja  kubernetes_rbac_abuse.jinja  logging_monitoring.jinja  mfa_identity_controls.jinja  pod_security_bypass.jinja  public_exposure.jinja  secrets_management_vault.jinja  serverless_attacks.jinja  serverless_event_injection.jinja  service_mesh_security.jinja  supply_chain_integrity.jinja
strix/prompts/compliance/: gdpr_data_exposure.jinja  hipaa_security_testing.jinja  pci_dss_testing.jinja
strix/prompts/coordination/: root_agent.jinja  verification.jinja
strix/prompts/frameworks/: aspnet_core.jinja  django.jinja  express.jinja  fastapi.jinja  flask.jinja  laravel.jinja  nestjs.jinja  nextjs.jinja  nuxtjs.jinja  rails.jinja  rails_security.jinja  remix.jinja  spring_boot.jinja  spring_boot_security.jinja  sveltekit.jinja
strix/prompts/infrastructure/: cdn_security.jinja  csp_bypass_advanced.jinja  dns_poisoning.jinja  email_header_injection.jinja  email_security_testing.jinja  email_spoofing.jinja  service_worker_attacks.jinja  smb_exploitation.jinja  spf_dkim_dmarc_bypass.jinja  tls_ssl_vulnerabilities.jinja  trusted_types_bypass.jinja
strix/prompts/kubernetes/: control_plane_exposure.jinja  ingress_misconfig.jinja  network_policies.jinja  rbac_privilege_escalation.jinja  secrets_unauthorized_access.jinja  workload_escape.jinja
strix/prompts/mobile/: android_security_testing.jinja  api_versioning.jinja  deep_link_hijacking.jinja  ios_security_testing.jinja  mobile_api_security.jinja  mobile_ssl_pinning_bypass.jinja
strix/prompts/protocols/: api_gateway_bypass.jinja  graphql.jinja  grpc.jinja  grpc_testing.jinja  http3_quic_security.jinja  json_rpc.jinja  ldap.jinja  mqtt.jinja  oauth2_oidc.jinja  rest_api_security.jinja  saml.jinja  webhook_security.jinja  webrtc_vulnerabilities.jinja  websocket.jinja  websocket_hijacking.jinja
strix/prompts/reconnaissance/: asn_lookup.jinja  dns_resolver.jinja  google_dorker.jinja  header_analyzer.jinja  ssl_certificate_analyzer.jinja  subdomain_enum.jinja  tech_fingerprinter.jinja  waf_detector.jinja  whois_lookup.jinja
strix/prompts/technologies/: adversarial_ml_attacks.jinja  ai_agent_exploitation.jinja  ai_llm_security.jinja  argocd_attacks.jinja  auth0.jinja  aws_cognito.jinja  browser_extension_security.jinja  build_pipeline_attacks.jinja  clerk.jinja  code_signing_bypass.jinja  container_image_poisoning.jinja  docker_kubernetes_api.jinja  elasticsearch.jinja  electron_app_security.jinja  github_actions_injection.jinja  gitlab_ci_exploitation.jinja  hasura.jinja  jenkins_exploitation.jinja  keycloak.jinja  llm_integration_security.jinja  model_extraction.jinja  model_poisoning.jinja  mongodb_atlas.jinja  prisma.jinja  prompt_injection_advanced.jinja  rag_poisoning.jinja  redis.jinja  secrets_in_ci.jinja  stripe.jinja  stripe_payment_flaws.jinja  temporal_workflow.jinja  terraform_iac_security.jinja  typosquatting_detection.jinja  vercel.jinja  web3_dapp_security.jinja
strix/prompts/verification_types/: application_dos.jinja  authentication_jwt.jinja  broken_function_level_authorization.jinja  business_logic.jinja  cache_poisoning.jinja  clickjacking.jinja  cors_misconfiguration.jinja  crlf_header_injection.jinja  csrf.jinja  deserialization.jinja  http_request_smuggling.jinja  idor.jinja  information_disclosure.jinja  insecure_file_uploads.jinja  mass_assignment.jinja  nosql_ldap_injection.jinja  oauth_oidc_misconfiguration.jinja  open_redirect.jinja  path_traversal_lfi_rfi.jinja  race_conditions.jinja  rate_limiting_abuse.jinja  rce.jinja  sql_injection.jinja  ssrf.jinja  ssti.jinja  subdomain_takeover.jinja  xss.jinja  xxe.jinja
strix/prompts/vulnerabilities/: account_takeover.jinja  ad_enumeration.jinja  adcs_attacks.jinja  api_inventory_shadow.jinja  api_rate_limiting.jinja  api_schema_bypass.jinja  application_dos.jinja  asrep_roasting.jinja  authentication_jwt.jinja  bfla_comprehensive.jinja  bola_comprehensive.jinja  broken_function_level_authorization.jinja  broken_object_property_level_authorization.jinja  business_logic.jinja  cache_poisoning.jinja  cbc_bit_flipping.jinja  certificate_pinning_bypass.jinja  clickjacking.jinja  cors_misconfiguration.jinja  (+63 more)
strix/runtime/: docker_runtime.py  tool_server.py
strix/telemetry/: tracer.py
strix/tools/: __init__.py  argument_parser.py  executor.py  registry.py  validation.py
tests/: test_agent_stop.py  test_executor_http_timeout.py  test_llm_cache_control.py  test_llm_env_config.py  test_minimum_agent_requirements.py  test_missing_parameters.py  test_root_agent_tool_filtering.py  test_terminal_timeout.py  test_tool_parameter_validation.py  test_tool_server_timeout.py  test_tool_usage_guidance.py
tests/tools/: test_evidence_validation.py  test_parallel_execution.py  test_verification_workflow.py
(+272 files in other folders)
